# sokol-space-miner

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CONSTRUCTION_PLAN.md  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  playwright.config.ts
.github/: AGENT.md
.github/workflows/: deploy.yml  release.yml  valgrind.yml
_site/: index.html
_site/music/: index.html
_site/play/: index.html
assets/voice/: .gitignore  README.md
cmake/: voice_assets.cmake
docker/: entrypoint.sh
docs/: cargo-architecture.md  decentralization.md  manifest-refactor.md  operator-onboarding.md  sector-x-whitepaper.md
memory/: MEMORY.md  project_anime_integration.md  project_collision_architecture.md
scripts/: check_vendor_drift.sh  crap.py  generate-motd.sh  local-build-server.sh  test_vendor_drift_detection.sh
scripts/git-hooks/: post-commit  pre-push
server/: Dockerfile  autopilot_eval.c  cargo_receipt_issue.c  cargo_receipt_issue.h  chain_log.c  chain_log.h  chain_log_verify.c  game_sim.c  game_sim.h  highscore.c  highscore.h  main.c  net_protocol.h  sim_ai.c  sim_ai.h  sim_anchor.c  sim_anchor.h  sim_asteroid.c  sim_asteroid.h  sim_autopilot.c  sim_catalog.c  sim_catalog.h  sim_construction.c  sim_construction.h  sim_flight.c  sim_mining.c  sim_mining.h  sim_nav.c  sim_nav.h  sim_npc.c  sim_npc.h  sim_physics.c  sim_production.c  sim_production.h  sim_save.c  sim_ship.c  sim_ship.h  station_authority.c  station_authority.h  task-definition.json
shared/: base58.h  belt.c  belt.h  cargo_receipt.c  cargo_receipt.h  chunk.h  economy_const.h  laser.c  laser.h  manifest.h  mining.h  module_schema.c  module_schema.h  protocol.h  signal_crypto.h  signal_model.h  station_geom.h  station_util.c  station_util.h  tractor.c  tractor.h  trade_paging.c  trade_paging.h  types.h
src/: audio.c  audio.h  avatar.c  avatar.h  client.h  commodity.c  commodity.h  economy.c  economy.h  episode.c  episode.h  hud.c  hud.h  identity.c  identity.h  input.c  input.h  inspect_anim.c  inspect_anim.h  local_server.c  main.c  manifest.c  mining_client.c  mining_client.h  motd_json.h  music.c  music.h  net.c  net.h  net_sync.c  net_sync.h  npc.c  onboarding.c  onboarding.h  palette.h  render.c  ship.c  ship.h  station_palette.h  station_ui.c  (+7 more)
src/tests/: test_anchor.c  test_asteroid.c  test_bug_regression.c  test_cargo_lineage.c  test_chain.c  test_chain_log.c  test_commodity.c  test_construction.c  test_cross_station_settlement.c  test_crypto.c  test_econ_sim.c  test_economy.c  test_furnace_color.c  test_harness.c  test_harness.h  test_highscore_replay.c  test_identity.c  test_inspect_anim.c  test_labels.c  test_laser.c  test_manifest.c  test_math.c  test_motd_rarity.c  test_navigation.c  test_prefix_class_pricing.c  test_protocol.c  test_pvp_rocks.c  test_registry.c  test_relationship_tracking.c  test_respawn_fee.c  test_save.c  test_save_keyed_by_pubkey.c  test_ship.c  test_signal_verify.c  test_signed_action.c  test_sovereign_ledger.c  test_station_authority.c  test_tractor.c  test_trade_paging.c  test_world_sim.c
tests/: browser-smoke.spec.ts
tests/fixtures/: 3F5qRPtKg8GhGNnbd3qCj6nVJxWsGxq7pvH84okYLAqf.golden.json  README.md
tools/: dev_http.py  gen_chain_fixture.c  mining_sim.c  run_tests.sh  signal_verify.c
web/: index.html  play.html  shell.html  voicebox.js
web/voice/: personas.js  stt.js  tts.js
